LimitRequestBody の設定を追加
- All in one wp migrate の import 対策

--- a/docker/web/base.sample.conf
+++ b/docker/web/base.sample.conf
@@ -1,9 +1,11 @@
 <VirtualHost *:80>
     ServerName www.hoge.test
     VirtualDocumentRoot "/var/www/html/www.hoge.test/public"
+    LimitRequestBody 5368709120
 </VirtualHost>
 
 <VirtualHost *:80>
     ServerName www.fuga.test
     VirtualDocumentRoot "/var/www/html/www.fuga.test/public"
+    LimitRequestBody 5368709120
 </VirtualHost>
